[project]
name = "ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cozepy>=0.18.0",
    "llama-index>=0.12.48",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.1.1",
]
[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true